# cortex_project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md
docs/: CORTEX_AI_ARCHITECTURE_PLAN.md  CORTEX_AI_PROVIDER_DESIGN.md  WHITEPAPER_SCHOOL.docx  communication-systems.md  pow.md
evm/: README.md  foundry.toml
evm/bridge/: bridge_daemon.py
evm/config/: bridge_config.example.json
evm/data/: bridge_state.example.json
evm/deploy/: com.cryptex.bridge-daemon.plist.example  cryptex-bridge.service.example
evm/docs/: AUTOMATED_BRIDGE.md  BRIDGE_OPERATOR_RUNBOOK.md  MAINNET_DEPLOYMENT_CHECKLIST.md
evm/script/: DeployWrappedCryptEX.s.sol
evm/src/: WrappedCryptEX.sol
evm/test/: WrappedCryptEX.t.sol
evm/tools/: compute_bridge_deposit_id.sh  deploy_wcrx_mainnet.sh  write_reserve_status.py
gui/: CMakeLists.txt
gui/app/: ChatWindow.cpp  ChatWindow.hpp  DaemonController.cpp  DaemonController.hpp  MailWindow.cpp  MailWindow.hpp  MainWindow.cpp  MainWindow.hpp  MinerController.cpp  MinerController.hpp  NodeWindow.cpp  NodeWindow.hpp  WalletManagerWindow.cpp  WalletManagerWindow.hpp  main.cpp
gui/platform/: SpeechTranscriber.cpp  SpeechTranscriber.hpp  SpeechTranscriber_mac.mm  VideoThumbnailer.cpp  VideoThumbnailer.hpp  VideoThumbnailer_mac.mm
gui/resources/: CryptEX.icns  CryptEX.rc  branding.qrc  cryptexqt.desktop
gui/rpc/: RpcClient.cpp  RpcClient.hpp
gui/views/: AddressFormatDialog.cpp  AddressFormatDialog.hpp  AudioPreviewWidget.cpp  AudioPreviewWidget.hpp  ChatEntryDialog.cpp  ChatEntryDialog.hpp  ChatPage.cpp  ChatPage.hpp  ChatProxyPage.cpp  ChatProxyPage.hpp  ChatTheme.hpp  DashboardPage.cpp  DashboardPage.hpp  ForumPage.cpp  ForumPage.hpp  IrcPage.cpp  IrcPage.hpp  MailAccountCreatePage.cpp  MailAccountCreatePage.hpp  MailAccountsPage.cpp  MailAccountsPage.hpp  MailComposePage.cpp  MailComposePage.hpp  MailEntryDialog.cpp  MailEntryDialog.hpp  MailListPage.cpp  MailListPage.hpp  MailSecurityPage.cpp  MailSecurityPage.hpp  MediaComposerDialog.cpp  MediaComposerDialog.hpp  MiningPage.cpp  MiningPage.hpp  NetworkGraphPage.cpp  NetworkGraphPage.hpp  PrivateContactsPage.cpp  PrivateContactsPage.hpp  PrivateHistoryPage.cpp  PrivateHistoryPage.hpp  PublicDirectoryPage.cpp  (+15 more)
scripts/: bootstrap-windows-x86_64-deps.sh  build-release-matrix.sh  generate_whitepaper_pdf.py  package-linux-appimage.sh  package-macos-bundle.sh  package-windows-runtime.sh  stage-release.sh
src/: ARCHITECTURE.md  CMakeLists.txt  aes256.hpp  base64.cpp  base64.hpp  bip39.cpp  bip39.hpp  bip39_words.inc  block.cpp  block.hpp  block_store.cpp  block_store.hpp  blockchain.cpp  blockchain.hpp  chainparams.cpp  chainparams.hpp  chat_content.cpp  chat_content.hpp  chat_history.cpp  chat_history.hpp  chat_secure.cpp  chat_secure.hpp  chat_state.cpp  chat_state.hpp  config.cpp  config.hpp  constants.hpp  crc.hpp  debug.cpp  debug.hpp  duckdns.cpp  duckdns.hpp  main.cpp  mempool.cpp  mempool.hpp  network.cpp  network.hpp  powminer_main.cpp  rpc.cpp  rpc.hpp  (+16 more)
src/asm/: powminer_darwin_arm64.S  powminer_linux_arm64.S  powminer_linux_x86_64.S  powminer_windows_x86_64.S
src/intelligence/: inference_provider.hpp  intelligence_bus.cpp  intelligence_bus.hpp  intelligence_config.cpp  intelligence_config.hpp  intelligence_policy.cpp  intelligence_policy.hpp  intelligence_service.cpp  intelligence_service.hpp  intelligence_types.cpp  intelligence_types.hpp  null_provider.cpp  null_provider.hpp  rules_provider.cpp  rules_provider.hpp  sidecar_protocol.cpp  sidecar_protocol.hpp
src/intelligence/collectors/: snapshot_collector.cpp  snapshot_collector.hpp
toolchains/: linux-aarch64.cmake  linux-clang.cmake  linux-x86_64.cmake  mingw-w64-arm64.cmake  mingw-w64-x86_64.cmake  mingw-w64.cmake
website/: .env.example  README.md  requirements.txt  run.sh
website/app/: config.py  main.py  security.py
website/data/: reserve_status.json
website/deploy/: Caddyfile.example  cryptex-website.service.example  nginx-cryptexorg.conf  start-cloudflared-tunnel.sh
website/static/css/: site.css
website/static/js/: site.js
website/templates/: base.html  downloads.html  explorer.html  home.html  network.html  reserve.html  roadmap.html  security.html  technology.html
